<resources>
    <string name="app_name">Book App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Book App</string>
    <string name="login">LOGIN</string>
    <string name="continue_without_login">CONTINUE WITHOUT LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_have_account_sign_up">Not have Account? Sign Up</string>
    <string name="please_login">Please Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="comfirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="add_category">+ Add Category</string>
    <string name="submit">SUBMIT</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="book_description">Book Description</string>
    <string name="book_title">Book Title</string>
    <string name="book_category">Book Category</string>
    <string name="add_a_new_book">Add a new Book</string>
    <string name="upload">UPLOAD</string>
    <string name="books">Books</string>
    <string name="category">Category</string>
    <string name="update">UPDATE</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="no_books_found_of_this_category">No books found of this category</string>
    <string name="n_m">N/A</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="views">Views</string>
    <string name="the_description_of_the_book">The description of the book</string>
    <string name="read">READ</string>
    <string name="read_book">Read Book</string>
    <string name="n_n">N/N</string>
    <string name="dowmload">DOWMLOAD</string>
    <string name="downloading_0_mb_0_mb">Downloading: 0 MB / 0 MB</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="favorite_books">Favorite Books</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="member">Member</string>
    <string name="favorite_book">Favorite Book</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>