<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.presentation.CategoryDetailsFragment">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/books"

            android:textColor="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/category"

            android:textColor="@color/white"

            />


    </RelativeLayout>
    <EditText
        android:id="@+id/book_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/search"
        android:padding="15dp"

        android:textColorHint="@color/gray02"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_search_gray"
        android:layout_below="@id/top_bar"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/not_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/no_books_found_of_this_category"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_16sdp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/books"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/book_search"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/pdf_row_item" />

</RelativeLayout>