<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.presentation.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/texts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/shape_toolbar02"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="@color/purple_500"
            android:src="@drawable/ic_edit_white"
            app:layout_constraintBottom_toBottomOf="@id/texts"
            app:layout_constraintEnd_toEndOf="@id/texts"
            app:layout_constraintTop_toTopOf="@id/texts" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="@color/purple_500"
            android:src="@drawable/ic_back_white"
            app:layout_constraintBottom_toBottomOf="@id/texts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/texts" />

        <View
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@drawable/back02"
            app:layout_constraintTop_toBottomOf="@id/texts" />

        <View
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@drawable/shape_rect01" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_profile"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_110sdp"
            android:background="@color/white"
            android:src="@drawable/ic_person_gray"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/styleImage" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_profile" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/user_gmail_com"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/account"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/account_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_m"
            app:layout_constraintEnd_toEndOf="@id/account"
            app:layout_constraintStart_toStartOf="@id/account"
            app:layout_constraintTop_toBottomOf="@id/account"

            />

        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/member"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/member_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_m"
            app:layout_constraintEnd_toEndOf="@id/member"
            app:layout_constraintStart_toStartOf="@id/member"
            app:layout_constraintTop_toBottomOf="@id/member"

            />

        <TextView
            android:id="@+id/favorite_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/favorite_book"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/favorite_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_m"
            app:layout_constraintEnd_toEndOf="@id/favorite_book"
            app:layout_constraintStart_toStartOf="@id/favorite_book"
            app:layout_constraintTop_toBottomOf="@id/favorite_book"

            />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@color/gray02"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_num" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/line"
            tools:listitem="@layout/pdf_row_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>