<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.presentation.ShowBookFragment">

    <RelativeLayout

        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/shape_toolbar02">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/books"

            android:textColor="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/category"

            android:textColor="@color/white"

            />


    </RelativeLayout>



    <ScrollView
        android:layout_above="@id/read_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <RelativeLayout
                    android:id="@+id/pdf_view"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray02">

                    <ImageView
                        android:id="@+id/view_page"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:indeterminateTint="@color/gray01" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/title_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/pdf_view"
                    android:maxLines="2"
                    android:text="@string/book_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_book"
                    android:layout_toEndOf="@id/pdf_view">

                    <TableRow>

                        <TextView
                            android:id="@+id/category_lable"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/category"
                            android:textColor="@color/black"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/category_tv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/n_m"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/date_label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/date"
                            android:textColor="@color/black"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/date_tv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_m"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/size_label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/size"
                            android:textColor="@color/black"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/size_tv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_m"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/view_label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="Views"
                            android:textColor="@color/black"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/view_tv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_m"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/download_label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="Downloads"
                            android:textColor="@color/black"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/download_tv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_m"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/page_label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="pages"
                            android:textColor="@color/black"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/page_tv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_m"
                            android:textStyle="bold" />

                    </TableRow>
                </TableLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/the_description_of_the_book"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>

    <LinearLayout
android:id="@+id/bo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_500"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/read_book"
            android:backgroundTint="@color/purple_500"
            android:drawableTop="@drawable/baseline_menu_book_24"
            android:text="@string/read"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            android:layout_weight="1"
            app:cornerRadius="5dp"

            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/download_book"
            android:backgroundTint="@color/purple_500"
            android:drawableTop="@drawable/baseline_download_24"
            android:text="@string/dowmload"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            android:layout_weight="1"
            app:cornerRadius="5dp"

            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/favorite_book"
            android:backgroundTint="@color/purple_500"
            android:drawableTop="@drawable/baseline_favorite_border_24"
            android:text="@string/favorite"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            />


    </LinearLayout>


</RelativeLayout>